--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ npm-debug.log*
 
 # Dependency directory
 node_modules
+/.pnp
+.pnp.js
 
 # Optional npm cache directory
 .npm
@@ -16,3 +18,20 @@ node_modules
 
 # Environment variables
 .env
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
